feat: Correcion-commit,  creacion de función para obtener todas las dependencias Se crea la función GetDependenciasRolGeneral en helper para que obtenga todas las dependencias, y se implementa en el controlador HistoricosCumplidos en GetDependenciasGeneral. @stevencol udistrital/Cumplidos_y_certificaciones_documentacion#38
